# BleScope

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  3-enhancement.yml  config.yml
.github/workflows/: pre-release.yml  release-please.yml  release.yml
libs/blescope-dissector/: README.md  pyproject.toml
libs/blescope-dissector/blescope_dissector/: __init__.py  base.py  beacon.py  company_identifiers.yaml  decoder.py
src/: main.py
src/blescope/api/: app.py  dependencies.py  websocket_manager.py
src/blescope/device_management/application/ports/: device_connector.py  device_repository.py
src/blescope/device_management/application/queries/: get_devices.py
src/blescope/device_management/domain/: characteristic.py  device.py  events.py  exceptions.py  service.py
src/blescope/device_management/infrastructure/adapters/: observable_device_repository.py
src/blescope/device_management/infrastructure/observers/: event_publishing_observer.py
src/blescope/device_management/infrastructure/web/: device_router.py
src/blescope/interaction/domain/: events.py  exceptions.py
src/blescope/interaction/dto/: interaction_dto.py
src/blescope/interaction/services/: interaction_service.py
src/blescope/scanning/application/ports/: bluetooth_scanner.py
src/blescope/scanning/domain/: events.py
src/blescope/shared/events/: event_bus.py  exceptions.py
src/blescope/shared/infrastructure/: logging_config.py
static/: index.html
(+3 files in other folders)
