[project]
name = "blescope"
version = "0.0.0"
description = "Like a telescope for Bluetooth Low Energy devices"
authors = [
    { name = "Lionel H", email = "me@nullbyte.be" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

[tool.poetry]
packages = [
    { include = "blescope", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
blescope-dissector = { path = "libs/blescope-dissector", develop = true }
bleak = ">=1.1.1,<2.0.0"
fastapi = {extras = ["standard"], version = ">=0.116.1,<0.117.0"}
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
pydantic = ">=2.11.9,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
orjson = ">=3.11.3,<4.0.0"
dataclasses-json = "^0.6.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
